WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69800
REGRESSION (
r96770
-
r96777
): fast/dom/Window/window-properties.html, fast/dom/prototype-inheritance-2.html, fast/js/global-constructors.html failing on SnowLeopard Intel Release (Tests)
https://bugs.webkit.org/show_bug.cgi?id=69800
Summary
REGRESSION (r96770-r96777): fast/dom/Window/window-properties.html, fast/dom/...
Jer Noble
Reported
2011-10-10 16:38:09 PDT
The following tests started failing on SnowLeopard Intel Release (Tests) between
r96771
and
r96777
(inclusive): fast/dom/Window/window-properties.html fast/dom/prototype-inheritance-2.html fast/js/global-constructors.html
http://trac.webkit.org/log/trunk?rev=96777&stop_rev=96771&limit=8
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r96770%20(33666)/results.html
passed
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r96777%20(33667)/results.html
failed
Attachments
Patch
(5.23 KB, patch)
2011-10-10 16:42 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-10-10 16:42:32 PDT
Created
attachment 110434
[details]
Patch
Csaba Osztrogonác
Comment 2
2011-10-11 05:41:47 PDT
Comment on
attachment 110434
[details]
Patch LGTM, r=me.
WebKit Review Bot
Comment 3
2011-10-11 05:48:07 PDT
Comment on
attachment 110434
[details]
Patch Rejecting
attachment 110434
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: cripts/webkitpy/common/system/executive.py", line 420, in run_command close_fds=self._should_close_fds()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/system/executive.py", line 476, in popen return subprocess.Popen(*args, **kwargs) File "/usr/lib/python2.6/subprocess.py", line 623, in __init__ errread, errwrite) File "/usr/lib/python2.6/subprocess.py", line 1141, in _execute_child raise child_exception TypeError: execv() arg 2 must contain only strings Full output:
http://queues.webkit.org/results/10031434
Csaba Osztrogonác
Comment 4
2011-10-11 05:53:49 PDT
Landed in
http://trac.webkit.org/changeset/97148
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug