REGRESSION (r96770-r96777): fast/dom/Window/window-properties.html, fast/dom/prototype-inheritance-2.html, fast/js/global-constructors.html failing on SnowLeopard Intel Release (Tests) https://bugs.webkit.org/show_bug.cgi?id=69800

Patch by Jer Noble <jer.noble@apple.com> on 2011-10-11
Reviewed by Csaba Osztrogonác.

Tools:

Enable WEB_AUDIO at runtime.

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetDefaultsToConsistentValues):

LayoutTests:

Rebaseline after r96774.

* platform/mac/fast/dom/prototype-inheritance-2-expected.txt:
* platform/mac/fast/js/global-constructors-expected.txt:

Canonical link: https://commits.webkit.org/85883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97148 268f45cc-cd09-0410-ab3c-d52691b4dbfc